Corrected footer menu on mobile:

--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -69,6 +69,14 @@ footer
     margin 0 .5em
 
 @media only screen and (max-width: $desktop-breakpoint) 
-  footer *
-    text-align center
+  footer
     margin 0 auto
+    padding 0 2em
+    &, *
+      text-align center
+    a
+      width 100%
+    span
+      margin 0 auto
+    img
+      float left
